test/bad/basic/decl04.px

Int x
if true do
    Bool x = true
